syntax = "proto3";

package greeter.v1;

option go_package = "github.com/ogurasousui/codex-grpc-clean-arch/internal/adapters/grpc/gen/greeter/v1;greeterpb";

message SayHelloRequest {}

message SayHelloResponse {
  string message = 1;
}

service GreeterService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}
